--- a/emacs.org
+++ b/emacs.org
@@ -111,6 +111,11 @@ Now, start emacs.
 (use-package scala-mode)
 (use-package sbt-mode)
 
+(use-package js2-mode)
+(add-to-list 'auto-mode-alist '("\\.js$" . js2-mode))
+(add-to-list 'auto-mode-alist '("\\.json$'" . js2-mode))
+(add-to-list 'interpreter-mode-alist '("node" . js2-mode))
+
 (use-package typescript-mode)
 
 (use-package go-mode)
@@ -2217,6 +2222,18 @@ support ammonite repl in org babel, requires `amm` command, or ammonite-repl
 (define-key js-mode-map (kbd "C-M-x") nil) ;; remove default js-eval-defun
 (define-key js-mode-map (kbd "C-c C-j") nil) ;; remove js-set-js-context
 (define-key js-mode-map (kbd "M-.") nil) ;; remove js-find-symbol -- the built-in xref-find-definitions works better for me
+
+;; turn off all custom hide/show bindings, hs-minor-mode is good enough
+(define-key js2-mode-map (kbd "C-c C-a") nil)
+(define-key js2-mode-map (kbd "C-c C-e") nil)
+(define-key js2-mode-map (kbd "C-c C-f") nil)
+(define-key js2-mode-map (kbd "C-c C-o") nil)
+(define-key js2-mode-map (kbd "C-c C-s") nil)
+(define-key js2-mode-map (kbd "C-c C-t") nil)
+
+;; todojoe - turn off for now, toggling warnings & errors
+;; not sure which binding i want for this
+(define-key js2-mode-map (kbd "C-c C-w") nil)
 
 (define-key js-mode-map (kbd "C-x C-e") 'nodejs-repl-send-last-expression)
 (define-key js-mode-map (kbd "C-c C-j") 'nodejs-repl-send-line)
