better imenu binding

--- a/emacs.org
+++ b/emacs.org
@@ -1205,6 +1205,7 @@ argument makes the windows rotate backwards."
 (global-set-key (kbd "M-*") 'calculator)
 (global-set-key (kbd "C-s") 'isearch-forward-regexp)
 (global-set-key (kbd "C-r") 'isearch-backward-regexp)
+(global-set-key (kbd "M-s i") 'imenu)
 (global-set-key (kbd "C-M-g") 'goto-line)
 (global-set-key (kbd "C-M-9") 'winner-undo)
 (global-set-key (kbd "C-M-0") 'winner-redo)
@@ -1225,7 +1226,6 @@ argument makes the windows rotate backwards."
 (global-set-key (kbd "C-<") 'mc/mark-previous-like-this)
 (global-set-key (kbd "C->") 'mc/mark-next-like-this)
 (global-set-key (kbd "C-x r t") 'mc/edit-lines)
-(global-set-key (kbd "C-c i") 'imenu) ;; todojoe semantic
 (define-key sp-keymap (kbd "M-<backspace>") nil)
 (define-key sp-keymap (kbd "C-M-p") nil)
 (define-key sp-keymap (kbd "C-M-n") nil)
@@ -1819,10 +1819,10 @@ support =gist= and =gist+raw= org links
 (global-set-key (kbd "C-x E") 'counsel-kmacro)
 (global-set-key (kbd "C-x p") 'counsel-emacs-processes-dwim)
 (global-set-key (kbd "C-x P") 'proced)
-(global-set-key (kbd "C-c i") 'counsel-imenu)
 (global-set-key (kbd "M-s o") 'swiper-thing-at-point)
 (global-set-key (kbd "C-s") 'swiper)
 (global-set-key (kbd "C-r") 'swiper-backward)
+(global-set-key (kbd "M-s i") 'counsel-imenu)
 (define-key swiper-map (kbd "C-s") 'ivy-next-line)
 (define-key swiper-map (kbd "C-r") 'ivy-previous-line)
 (global-set-key (kbd "M-s g") 'counsel-grep)
