--- a/emacs.org
+++ b/emacs.org
@@ -387,12 +387,6 @@ For long running processes, this will always toggle back and forth between the p
 (menu-bar-mode -1)
 (scroll-bar-mode -1)
 
-(load-theme 'afternoon t)
-(set-cursor-color "dark grey")
-(set-background-color "black")
-(set-face-background 'fringe nil)
-
-(set-face-attribute 'header-line nil :background "#005858" :foreground "white")
 (setq frame-title-format nil)
 
 (when (eq system-type 'darwin)
@@ -404,14 +398,6 @@ For long running processes, this will always toggle back and forth between the p
 (setq inhibit-startup-message t
       initial-scratch-message ""
       initial-major-mode 'org-mode)
-#+END_SRC
-
-mode line
-#+BEGIN_SRC emacs-lisp
-(set-face-attribute 'mode-line nil :font (jw--font-name jw--default-font-size) :background "#22083397778B" :foreground "#7db5d6" :box '(:style released-button))
-(set-face-attribute 'mode-line-inactive nil :background "#263238" :foreground "gray" :box '(:style released-button))
-(set-face-attribute 'mode-line-buffer-id nil :foreground "white")
-(set-face-attribute 'mode-line-highlight nil :foreground "#7db5d6")
 
 (defvar jw-mode-line-config-show-pwd nil)
 (defun mode-line-pwd-on () (interactive) (setq jw-mode-line-config-show-pwd t))
@@ -466,16 +452,37 @@ mode line
     (mode-line-on local)))
 #+END_SRC
 
-fix for cursor color in clients falling back to the default theme [[http:emacs.stackexchange.com/a/14575][copied from stackoverflow]]
-todo - these might go away after custom theme is done
+theme
 #+BEGIN_SRC emacs-lisp
-(require 'frame)
+(load-theme 'afternoon t)
 
-(defun fix-colors-for-emacs-clients (frame)
-  (modify-frame-parameters frame (list (cons 'cursor-color "dark grey")))
-  (modify-frame-parameters frame (list (cons 'background-color "black"))))
+;; todo -- expand this and turn it into a full theme, using afternoon-theme as a base.
+;; afternoon theme is getting outdated & doesn't seem to be maintained much.
 
-(add-hook 'after-make-frame-functions 'fix-colors-for-emacs-clients)
+;; overrides
+(let* ((font-name (jw--font-name jw--default-font-size))
+       (background "black")
+       (foreground "#eaeaea") ;; from afternoon-theme
+       (cursor "dark gray")
+       )
+
+  (custom-set-faces
+   `(default ((t (:foreground ,foreground :background ,background))))
+   `(cursor ((t (:background ,cursor))))
+   `(fringe ((t (:background nil))))
+
+   `(mode-line ((t (:font ,font-name :foreground "#7db5d6" :background "#22083397778B" :box (:style released-button)))))
+   `(mode-line-inactive ((t (:foreground "gray" :background "#263238" :box (:style released-button)))))
+   `(mode-line-buffer-id ((t (:foreground ,foreground))))
+   `(mode-line-highlight ((t (:foreground "#7db5d6"))))
+   `(header-line ((t (:foreground ,foreground :background "#005858"))))
+
+   `(org-link ((t (:underline nil))))
+   `(org-date ((t (:underline nil))))
+   `(org-hide ((t (:foreground ,background :background ,background))))
+   `(org-headline-done ((t (:inherit shadow))))
+   )
+  )
 #+END_SRC
 
 * settings
@@ -1607,11 +1614,6 @@ eshell prompt
 
        (mapcar 'org--color-green-state org--done-todo-states)
        ))
-
-(custom-set-faces '(org-link ((t (:underline nil))))
-                  '(org-date ((t (:underline nil))))
-                  '(org-hide ((t (:foreground "black" :background "black"))))
-                  '(org-headline-done ((t (:inherit shadow)))))
 
 (delete '("+" (:strike-through t)) org-emphasis-alist)
 (add-to-list 'org-emphasis-alist '("+" (:strike-through t :inherit shadow)))
