--- a/emacs.org
+++ b/emacs.org
@@ -24,7 +24,6 @@ Now, start emacs.
 #+BEGIN_SRC emacs-lisp
 (use-package gnu-elpa-keyring-update)
 
-(use-package afternoon-theme)
 (use-package xterm-color)
 
 (use-package beacon)
@@ -387,17 +386,16 @@ For long running processes, this will always toggle back and forth between the p
 (menu-bar-mode -1)
 (scroll-bar-mode -1)
 
-(setq frame-title-format nil)
+(setq frame-title-format nil
+      inhibit-startup-message t
+      initial-scratch-message ""
+      initial-major-mode 'org-mode)
 
 (when (eq system-type 'darwin)
   (add-to-list 'default-frame-alist '(ns-transparent-titlebar . t))
   (add-to-list 'default-frame-alist '(ns-appearance . dark))
   (setq ns-use-proxy-icon nil)
   (setq ns-auto-hide-menu-bar t))
-
-(setq inhibit-startup-message t
-      initial-scratch-message ""
-      initial-major-mode 'org-mode)
 
 (defvar jw-mode-line-config-show-pwd nil)
 (defun mode-line-pwd-on () (interactive) (setq jw-mode-line-config-show-pwd t))
@@ -453,36 +451,207 @@ For long running processes, this will always toggle back and forth between the p
 #+END_SRC
 
 theme
-#+BEGIN_SRC emacs-lisp
-(load-theme 'afternoon t)
+#+BEGIN_SRC emacs-lisp :tangle jw-theme.el
+(deftheme jw)
 
-;; todo -- expand this and turn it into a full theme, using afternoon-theme as a base.
-;; afternoon theme is getting outdated & doesn't seem to be maintained much.
-
-;; overrides
-(let* ((font-name (jw--font-name jw--default-font-size))
+(let* ((class '((class color) (min-colors 89)))
+       (font-name (jw--font-name jw--default-font-size))
        (background "black")
-       (foreground "#eaeaea") ;; from afternoon-theme
+       (foreground "#eaeaea")
        (cursor "dark gray")
+       (highlight-dark "#14151E")
+       (highlight-bright "#103050")
+       (comment "#969896")
+       (red "#d54e53")
+       (orange "goldenrod")
+       (yellow "#e7c547")
+       (green "DarkOliveGreen3")
+       (cyan "#70c0b1")
+       (blue "DeepSkyBlue1")
+       (magenta "#c397d8")
        )
+  (custom-theme-set-faces
+   'jw
 
-  (custom-set-faces
-   `(default ((t (:foreground ,foreground :background ,background))))
-   `(cursor ((t (:background ,cursor))))
-   `(fringe ((t (:background nil))))
+   `(default ((,class (:foreground ,foreground :background ,background))))
+   `(cursor ((,class (:background ,cursor))))
+   `(fringe ((,class (:background nil))))
 
-   `(mode-line ((t (:font ,font-name :foreground "#7db5d6" :background "#22083397778B" :box (:style released-button)))))
-   `(mode-line-inactive ((t (:foreground "gray" :background "#263238" :box (:style released-button)))))
-   `(mode-line-buffer-id ((t (:foreground ,foreground))))
-   `(mode-line-highlight ((t (:foreground "#7db5d6"))))
-   `(header-line ((t (:foreground ,foreground :background "#005858"))))
+   `(link ((,class (:foreground ,foreground :underline t))))
+   `(link-visited ((,class (:foreground ,foreground :underline t))))
+   `(linum ((,class (:background nil :foreground ,green))))
+   `(border ((,class (:background ,highlight-dark))))
+   `(highlight ((,class (:inverse-video nil :background ,highlight-dark))))
 
-   `(org-link ((t (:underline nil))))
-   `(org-date ((t (:underline nil))))
-   `(org-hide ((t (:foreground ,background :background ,background))))
-   `(org-headline-done ((t (:inherit shadow))))
+   `(minibuffer-prompt ((,class (:foreground ,blue))))
+   `(region ((,class (:background ,highlight-bright))))
+   `(secondary-selection ((,class (:background ,highlight-dark))))
+
+   `(trailing-whitespace ((,class (:foreground ,red :inverse-video t :underline nil))))
+
+   `(bold ((,class (:weight bold))))
+   `(bold-italic ((,class (:slant italic :weight bold))))
+   `(underline ((,class (:underline t))))
+   `(italic ((,class (:slant italic))))
+
+   `(mode-line ((,class (:font ,font-name :foreground "#7db5d6" :background "#22083397778B" :box (:style released-button)))))
+   `(mode-line-inactive ((,class (:foreground "gray" :background "#263238" :box (:style released-button)))))
+   `(mode-line-buffer-id ((,class (:foreground ,foreground))))
+   `(mode-line-highlight ((,class (:foreground "#7db5d6"))))
+   `(mode-line-emphasis ((,class (:foreground "#7db5d6" :slant italic))))
+   `(header-line ((,class (:foreground ,foreground :background "#005858" :box (:style released-button)))))
+
+   `(font-lock-builtin-face ((,class (:foreground "LightCoral"))))
+   `(font-lock-comment-delimiter-face ((,class (:foreground ,comment))))
+   `(font-lock-comment-face ((,class (:foreground ,comment))))
+   `(font-lock-constant-face ((,class (:foreground ,green))))
+   `(font-lock-doc-face ((,class (:foreground "moccasin"))))
+   `(font-lock-doc-string-face ((,class (:foreground ,yellow))))
+   `(font-lock-function-name-face ((,class (:foreground ,orange))))
+   `(font-lock-keyword-face ((,class (:foreground ,blue))))
+   `(font-lock-negation-char-face ((,class (:foreground ,blue))))
+   `(font-lock-preprocessor-face ((,class (:foreground "gold"))))
+   `(font-lock-regexp-grouping-backslash ((,class (:foreground ,yellow))))
+   `(font-lock-regexp-grouping-construct ((,class (:foreground ,magenta))))
+   `(font-lock-string-face ((,class (:foreground "burlywood"))))
+   `(font-lock-type-face ((,class (:foreground "CadetBlue1"))))
+   `(font-lock-variable-name-face ((,class (:foreground ,yellow))))
+   `(font-lock-warning-face ((,class (:weight bold :foreground ,red))))
+   `(shadow ((,class (:foreground ,comment))))
+   `(success ((,class (:foreground "SeaGreen2"))))
+   `(error ((,class (:foreground ,red))))
+   `(warning ((,class (:foreground ,orange))))
+
+   `(match ((,class (:foreground ,blue :background ,background :inverse-video t))))
+   `(isearch ((,class (:foreground ,yellow :background ,background :inverse-video t))))
+   `(isearch-lazy-highlight-face ((,class (:foreground ,cyan :background ,background :inverse-video t))))
+   `(isearch-fail ((,class (:background ,background :inherit font-lock-warning-face :inverse-video t))))
+
+   `(flycheck-error ((,class (:underline (:style wave :color ,red)))))
+   `(flycheck-warning ((,class (:underline (:style wave :color ,orange)))))
+
+   `(flymake-warnline ((,class (:underline (:style wave :color ,orange) :background ,background))))
+   `(flymake-errline ((,class (:underline (:style wave :color ,red) :background ,background))))
+
+   `(outline-1 ((,class (:inherit nil :foreground "SkyBlue1"))))
+   `(outline-2 ((,class (:inherit nil :foreground ,yellow))))
+   `(outline-3 ((,class (:inherit nil :foreground ,magenta))))
+   `(outline-4 ((,class (:inherit nil :foreground ,cyan))))
+   `(outline-5 ((,class (:inherit nil :foreground ,orange))))
+   `(outline-6 ((,class (:inherit nil :foreground "CadetBlue1"))))
+   `(outline-7 ((,class (:inherit nil :foreground "cyanmarine1"))))
+   `(outline-8 ((,class (:inherit nil :foreground "turquoise2"))))
+   `(outline-9 ((,class (:inherit nil :foreground "LightSteelBlue1"))))
+
+   `(org-link ((,class (:foreground ,blue :underline nil))))
+   `(org-date ((,class (:foreground ,blue :underline nil))))
+   `(org-hide ((,class (:foreground ,background :background ,background))))
+   `(org-headline-done ((,class (:inherit shadow))))
+   `(org-agenda-structure ((,class (:foreground ,magenta))))
+   `(org-agenda-date ((,class (:foreground ,blue :underline nil))))
+   `(org-agenda-done ((,class (:foreground ,green))))
+   `(org-agenda-dimmed-todo-face ((,class (:foreground ,comment))))
+   `(org-block ((,class (:foreground ,orange))))
+   `(org-code ((,class (:foreground ,yellow))))
+   `(org-column ((,class (:background ,highlight-dark))))
+   `(org-column-title ((,class (:inherit org-column :weight bold :underline t))))
+   `(org-document-info ((,class (:foreground ,cyan))))
+   `(org-document-info-keyword ((,class (:foreground ,green))))
+   `(org-document-title ((,class (:weight bold :foreground ,orange :height 1.44))))
+   `(org-done ((,class (:foreground ,green))))
+   `(org-ellipsis ((,class (:foreground ,comment))))
+   `(org-footnote ((,class (:foreground ,cyan))))
+   `(org-formula ((,class (:foreground ,red))))
+   `(org-scheduled ((,class (:foreground ,green))))
+   `(org-scheduled-previously ((,class (:foreground ,orange))))
+   `(org-scheduled-today ((,class (:foreground ,green))))
+   `(org-special-keyword ((,class (:foreground ,orange))))
+   `(org-table ((,class (:foreground ,magenta))))
+   `(org-todo ((,class (:foreground ,red))))
+   `(org-upcoming-deadline ((,class (:foreground ,orange))))
+   `(org-warning ((,class (:weight bold :foreground ,red))))
+
+   `(magit-log-author ((,class (:foreground ,cyan))))
+
+   `(ivy-virtual ((,class (:foreground ,comment))))
+
+   `(erc-direct-msg-face ((,class (:foreground ,orange))))
+   `(erc-error-face ((,class (:foreground ,red))))
+   `(erc-header-face ((,class (:foreground ,foreground :background ,highlight-bright))))
+   `(erc-input-face ((,class (:foreground ,green))))
+   `(erc-keyword-face ((,class (:foreground ,yellow))))
+   `(erc-current-nick-face ((,class (:foreground ,green))))
+   `(erc-my-nick-face ((,class (:foreground ,green))))
+   `(erc-nick-default-face ((,class (:weight normal :foreground ,magenta))))
+   `(erc-nick-msg-face ((,class (:weight normal :foreground ,yellow))))
+   `(erc-notice-face ((,class (:foreground ,comment))))
+   `(erc-pal-face ((,class (:foreground ,orange))))
+   `(erc-prompt-face ((,class (:foreground ,blue))))
+   `(erc-timestamp-face ((,class (:foreground ,cyan))))
+   `(erc-keyword-face ((,class (:foreground ,green))))
+
+   `(rainbow-delimiters-depth-1-face ((,class (:foreground ,foreground))))
+   `(rainbow-delimiters-depth-2-face ((,class (:foreground ,cyan))))
+   `(rainbow-delimiters-depth-3-face ((,class (:foreground ,yellow))))
+   `(rainbow-delimiters-depth-4-face ((,class (:foreground ,green))))
+   `(rainbow-delimiters-depth-5-face ((,class (:foreground ,blue))))
+   `(rainbow-delimiters-depth-6-face ((,class (:foreground ,foreground))))
+   `(rainbow-delimiters-depth-7-face ((,class (:foreground ,cyan))))
+   `(rainbow-delimiters-depth-8-face ((,class (:foreground ,yellow))))
+   `(rainbow-delimiters-depth-9-face ((,class (:foreground ,green))))
+   `(rainbow-delimiters-unmatched-face ((,class (:foreground ,red))))
+
+   `(term ((,class (:foreground nil :background nil :inherit default))))
+   `(term-color-black   ((,class (:foreground ,foreground :background ,foreground))))
+   `(term-color-red     ((,class (:foreground ,red :background ,red))))
+   `(term-color-green   ((,class (:foreground ,green :background ,green))))
+   `(term-color-yellow  ((,class (:foreground ,yellow :background ,yellow))))
+   `(term-color-blue    ((,class (:foreground ,blue :background ,blue))))
+   `(term-color-magenta ((,class (:foreground ,magenta :background ,magenta))))
+   `(term-color-cyan    ((,class (:foreground ,cyan :background ,cyan))))
+   `(term-color-white   ((,class (:foreground ,background :background ,background))))
+
+   `(ansi-color-black   ((,class (:foreground ,foreground :background ,foreground))))
+   `(ansi-color-red   ((,class (:foreground ,red :background ,red))))
+   `(ansi-color-green   ((,class (:foreground ,green :background ,green))))
+   `(ansi-color-yellow   ((,class (:foreground ,yellow :background ,yellow))))
+   `(ansi-color-blue   ((,class (:foreground ,blue :background ,blue))))
+   `(ansi-color-magenta   ((,class (:foreground ,magenta :background ,magenta))))
+   `(ansi-color-cyan   ((,class (:foreground ,cyan :background ,cyan))))
+   `(ansi-color-white   ((,class (:foreground ,foreground :background ,foreground))))
    )
+
+  (custom-theme-set-variables
+   'jw
+   `(fci-rule-color ,highlight-bright)
+   `(vc-annotate-color-map
+     '((20  . ,red)
+       (40  . ,orange)
+       (60  . ,yellow)
+       (80  . ,green)
+       (100 . ,cyan)
+       (120 . ,blue)
+       (140 . ,magenta)
+       (160 . ,red)
+       (180 . ,orange)
+       (200 . ,yellow)
+       (220 . ,green)
+       (240 . ,cyan)
+       (260 . ,blue)
+       (280 . ,magenta)
+       (300 . ,red)
+       (320 . ,orange)
+       (340 . ,yellow)
+       (360 . ,green)))
+   `(vc-annotate-very-old-color nil)
+   `(vc-annotate-background nil))
   )
+
+(provide-theme 'jw)
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+(load-theme 'jw t)
 #+END_SRC
 
 * settings
