--- a/emacs.org
+++ b/emacs.org
@@ -551,13 +551,13 @@ theme
    `(org-agenda-date ((,class (:foreground ,blue :underline nil))))
    `(org-agenda-done ((,class (:foreground ,green))))
    `(org-agenda-dimmed-todo-face ((,class (:foreground ,comment))))
-   `(org-block ((,class (:foreground ,orange))))
+   ;; `(org-block ((,class (:foreground ,orange))))
    `(org-code ((,class (:foreground ,yellow))))
    `(org-column ((,class (:background ,highlight-dark))))
    `(org-column-title ((,class (:inherit org-column :weight bold :underline t))))
    `(org-document-info ((,class (:foreground ,cyan))))
    `(org-document-info-keyword ((,class (:foreground ,green))))
-   `(org-document-title ((,class (:weight bold :foreground ,orange :height 1.44))))
+   `(org-document-title ((,class (:weight bold :foreground ,orange))))
    `(org-done ((,class (:foreground ,green))))
    `(org-ellipsis ((,class (:foreground ,comment))))
    `(org-footnote ((,class (:foreground ,cyan))))
