--- a/emacs.org
+++ b/emacs.org
@@ -551,7 +551,7 @@ theme
    `(org-agenda-date ((,class (:foreground ,blue :underline nil))))
    `(org-agenda-done ((,class (:foreground ,green))))
    `(org-agenda-dimmed-todo-face ((,class (:foreground ,comment))))
-   ;; `(org-block ((,class (:foreground ,orange))))
+   `(org-block ((,class (:foreground ,foreground))))
    `(org-code ((,class (:foreground ,yellow))))
    `(org-column ((,class (:background ,highlight-dark))))
    `(org-column-title ((,class (:inherit org-column :weight bold :underline t))))
