--- a/emacs.org
+++ b/emacs.org
@@ -580,12 +580,12 @@ theme
    `(erc-keyword-face ((,class (:foreground ,yellow))))
    `(erc-current-nick-face ((,class (:foreground ,green))))
    `(erc-my-nick-face ((,class (:foreground ,green))))
-   `(erc-nick-default-face ((,class (:weight normal :foreground ,magenta))))
+   `(erc-nick-default-face ((,class (:weight normal :foreground ,cyan))))
    `(erc-nick-msg-face ((,class (:weight normal :foreground ,yellow))))
    `(erc-notice-face ((,class (:foreground ,comment))))
    `(erc-pal-face ((,class (:foreground ,orange))))
    `(erc-prompt-face ((,class (:foreground ,blue))))
-   `(erc-timestamp-face ((,class (:foreground ,cyan))))
+   `(erc-timestamp-face ((,class (:foreground ,magenta))))
    `(erc-keyword-face ((,class (:foreground ,green))))
 
    `(rainbow-delimiters-depth-1-face ((,class (:foreground ,foreground))))
