remove bold weight in some faces

--- a/emacs.org
+++ b/emacs.org
@@ -516,7 +516,7 @@ theme
    `(font-lock-string-face ((,class (:foreground "burlywood"))))
    `(font-lock-type-face ((,class (:foreground "CadetBlue1"))))
    `(font-lock-variable-name-face ((,class (:foreground ,yellow))))
-   `(font-lock-warning-face ((,class (:weight bold :foreground ,red))))
+   `(font-lock-warning-face ((,class (:foreground ,red))))
    `(shadow ((,class (:foreground ,comment))))
    `(success ((,class (:foreground "SeaGreen2"))))
    `(error ((,class (:foreground ,red))))
@@ -554,10 +554,10 @@ theme
    `(org-block ((,class (:foreground ,foreground))))
    `(org-code ((,class (:foreground ,yellow))))
    `(org-column ((,class (:background nil))))
-   `(org-column-title ((,class (:inherit org-column :weight bold :underline t))))
+   `(org-column-title ((,class (:inherit org-column :underline t))))
    `(org-document-info ((,class (:foreground ,cyan))))
    `(org-document-info-keyword ((,class (:foreground ,green))))
-   `(org-document-title ((,class (:weight bold :foreground ,orange))))
+   `(org-document-title ((,class (:foreground ,orange))))
    `(org-done ((,class (:foreground ,green))))
    `(org-ellipsis ((,class (:foreground ,comment))))
    `(org-footnote ((,class (:foreground ,cyan))))
@@ -569,7 +569,7 @@ theme
    `(org-table ((,class (:foreground ,magenta))))
    `(org-todo ((,class (:foreground ,red))))
    `(org-upcoming-deadline ((,class (:foreground ,orange))))
-   `(org-warning ((,class (:weight bold :foreground ,red))))
+   `(org-warning ((,class (:foreground ,red))))
 
    `(magit-log-author ((,class (:foreground ,cyan))))
 
